# nagios-check-hddtemp

./: .bandit  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS  MANIFEST.in  Makefile  Pipfile  README  README.rst  TODO  check_hddtemp  check_hddtemp.geany  check_hddtemp.py  check_hddtemp.pyi  check_hddtempc  nagios-plugin-check-hddtemp.spec  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  config.yml
.github/workflows/: build.yml  check-requirements.yml
tests/: __init__.py  __init__.pyi  check_hddtemp_test.py  check_hddtemp_test.pyi
