# nagios-check-hddtemp
# setup.cfg


[metadata]
name = nagios-check-hddtemp
version = 0.9.0
description = Check HDD temperature Nagios plugin
python-requires = >=2.7
license-file = COPYING
author = Alexei Andrushievich
author-email = vint21h@vint21h.pp.ua
url = https://github.com/vint21h/nagios-check-hddtemp/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Unix
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Monitoring
    Topic :: Utilities
license = GPLv3+
long-description = file:README.rst
long-description-content-type = text/x-rst
keywords = nagios,hddtemp,check-hddtemp,plugin,check-hddtemp-plugin
scripts = check_hddtemp.py


[options]
packages = find:
zip_safe = False
include_package_data = True
test_suite = tests
install_requires =


[options.package_data]
nagios-check-hddtemp =
    README.rst
    COPYING
    AUTHORS


[options.data_files]
share/doc/nagios-check-hddtemp/ =
    README.rst
    COPYING
    AUTHORS


[options.extras_require]
test =
    bandit==1.6.2
    black==19.10b0
    check-manifest==0.41
    coverage==5.0.4
    coveralls==2.0.0
    dodgy==0.2.1
    flake8-annotations-complexity==0.0.4
    flake8-bugbear==20.1.4
    flake8-docstrings==1.5.0
    flake8-mypy==17.8.0
    flake8==3.7.9
    freezegun==0.3.15
    isort[pipfile]==4.3.21
    mypy==0.770
    pep8-naming==0.10.0
    pre-commit-hooks==2.5.0
    pre-commit==2.2.0
    pygments==2.6.1
    pylint==2.4.4
    pyroma==2.6
    pytest-cov==2.8.1
    pytest-mock==3.0.0
    pytest-tldr==0.2.1
    pytest==5.4.1
    readme_renderer==25.0
    removestar==1.2.2
    seed-isort-config==2.1.0
    tox-pyenv==1.1.0
    tox-travis==0.12
    tox==3.14.6
    twine==3.1.1


[options.packages.find]
exclude =
    tests.*
    tests


[wheel]
universal = True


[bdist_wheel]
universal = True


[sdist]
formats = zip


[mypy]
files = .
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True


[flake8]
max-line-length = 88
select = B,C,E,F,W,T4
doctests = True
# ignore "flake8-mypy" success to not broke pre-commit flow
ignore = T499


[check-manifest]
ignore =
    .bandit
    .editorconfig
    .env
    .envrc
    .gitattributes
    .gitignore
    .pre-commit-config.yaml
    .pylintrc
    .python-version
    .travis.yml
    Makefile
    nagios-plugin-check-hddtemp.spec
    Pipfile
    Pipfile.lock
    tests
    tests.*
    TODO
    tox.ini
ignore-bad-ideas =
    *.mo


[coverage:run]
branch = True
source = .


[coverage:report]
exclude_lines =
    pragma: no cover


[coverage:xml]


[isort]
balanced_wrapping = True
combine_as_imports = True
default_section = FIRSTPARTY
force_grid_wrap = 0
force_sort_within_sections = True
force_to_top = True
include_trailing_comma = True
known_first_party =
line_length = 88
lines_after_imports = 2
length_sort = True
multi_line_output = 3
use_parentheses = True
virtual_env = $VIRTUAL_ENV
known_third_party = setuptools
